--- a/creditcard.html
+++ b/creditcard.html
@@ -4,6 +4,7 @@
   
     <p id="description" class="italic cent">Kindly complete this form and give some information about the type of home or apartment you would like to have.</p><br>
     
+        <!-- This Code change is another comment. Alas, this is done by the Team Lead -->
     <div class="form">
     
       <form id="survey-form">
